--- a/manuell.html
+++ b/manuell.html
@@ -3,52 +3,101 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>abmelden.html</title>
+  <title>Manuell ab-/anmelden</title>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
   <style>
     body{font-family:system-ui,Segoe UI,Arial,sans-serif;margin:0;background:#f4f4f4;color:#111}
     .wrap{max-width:520px;margin:40px auto;padding:20px;background:#fff;border-radius:12px;box-shadow:0 4px 18px rgba(0,0,0,.08)}
-    h1{font-size:18px;margin:0 0 12px}
-    label{display:block;font-size:14px;margin:8px 0}
-    input{width:100%;padding:12px 14px;font-size:16px;border:1px solid #cbd5e1;border-radius:10px;outline:none}
-    input:focus{border-color:#2563eb;box-shadow:0 0 0 3px rgba(37,99,235,.15)}
-    button{margin-top:12px;width:100%;padding:12px 14px;font-size:16px;border:0;border-radius:10px;background:#2563eb;color:#fff;cursor:pointer}
-    button:active{transform:translateY(1px)}
+    h1{font-size:20px;margin:0 0 16px}
+    #info{color:#475569;margin-bottom:10px}
+    ul{list-style:none;margin:0;padding:0}
+    li{display:flex;justify-content:space-between;align-items:center;
+       padding:12px 10px;border:1px solid #e2e8f0;border-radius:10px;margin:8px 0;cursor:pointer}
+    .tag{font-size:12px;padding:4px 8px;border-radius:999px}
+    .ok{background:#dcfce7;color:#166534}         /* angemeldet */
+    .out{background:#fee2e2;color:#991b1b}        /* abgemeldet */
+    .muted{color:#64748b;font-size:14px}
   </style>
 </head>
 <body>
   <div class="wrap">
-    <h1>Wer soll abgemeldet werden?</h1>
-    <form id="f">
-      <label for="name">Name eingeben</label>
-      <input id="name" type="text" autocomplete="off" />
-      <button type="submit">Abmelden</button>
-    </form>
+    <h1>Manuelle Liste – Heute</h1>
+    <div id="info" class="muted">Lade…</div>
+    <ul id="list"></ul>
   </div>
 
   <script>
-    // Öffnet die Index-Seite im selben Ordner. Kein fester Domain-Name nötig.
-    const BASE = "index.html?child=";
+    // Firebase-Konfiguration für Projekt "sannucciabholen"
+    const firebaseConfig = {
+      apiKey: "AIzaSyDpZRi26CR2l8eL3njC88_Exc_FNgGoThg",
+      authDomain: "sannucciabholen.firebaseapp.com",
+      databaseURL: "https://sannucciabholen-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "sannucciabholen",
+      storageBucket: "sannucciabholen.firebasestorage.app",
+      messagingSenderId: "498711981733",
+      appId: "1:498711981733:web:e7b99ee43e125b82fa274c"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
 
-    function normalizeName(raw){
-      if(!raw) return "";
-      let s = String(raw).replace(/\s+/g,"");
-      s = s.toLowerCase();
-      return s.length ? s[0].toUpperCase() + s.slice(1) : "";
+    // Zeit-Helfer (Berlin)
+    function berlinParts(d=new Date()){
+      const fmt=new Intl.DateTimeFormat('de-DE',{timeZone:'Europe/Berlin',hour12:false,
+        year:'numeric',month:'2-digit',day:'2-digit',weekday:'long'});
+      const parts=fmt.formatToParts(d), g=t=>parts.find(p=>p.type===t)?.value;
+      return {y:g('year'), m:g('month'), d:g('day'), weekday:g('weekday')};
+    }
+    function dateKey(){ const p=berlinParts(); return `${p.y}-${p.m}-${p.d}`; }
+    function todayName(){ const w=berlinParts().weekday; return w.charAt(0).toUpperCase()+w.slice(1); }
+
+    const info=document.getElementById('info');
+    const list=document.getElementById('list');
+    let allNames=[];      // alle Kinder des heutigen Wochentags
+    let statusNow={};     // abmeldungen/<dateKey>
+
+    // UI rendern
+    function render(){
+      list.innerHTML='';
+      if(allNames.length===0){ info.textContent='Keine Einträge für heute.'; return; }
+      info.textContent = `Tag: ${todayName()} • Datum: ${dateKey()} — Tippen zum Umschalten`;
+      allNames.sort((a,b)=>a.localeCompare(b,'de')).forEach(name=>{
+        const abgemeldet = !!statusNow[name];
+        const li = document.createElement('li');
+        const left = document.createElement('div'); left.textContent = name;
+        const tag = document.createElement('span');
+        tag.className = 'tag ' + (abgemeldet ? 'out':'ok');
+        tag.textContent = abgemeldet ? 'abgemeldet' : 'angemeldet';
+        li.appendChild(left); li.appendChild(tag);
+        li.onclick = () => toggle(name, abgemeldet);
+        list.appendChild(li);
+      });
     }
 
-    document.getElementById("f").addEventListener("submit", function(e){
-      e.preventDefault();
-      const input = document.getElementById("name");
-      const name = normalizeName(input.value);
-      if(!name){
-        alert("Bitte einen Namen eingeben.");
-        input.focus();
-        return;
+    async function toggle(name, isOut){
+      const ref = db.ref(`abmeldungen/${dateKey()}/${name}`);
+      try{
+        if(isOut){ await ref.remove(); } else { await ref.set(true); }
+      }catch(e){ alert('Speichern fehlgeschlagen.'); }
+    }
+
+    async function init(){
+      try{
+        // Namen für HEUTE laden (aus dem Tagesknoten wie im Index)
+        const timesSnap = await db.ref(todayName()).once('value');
+        const times = timesSnap.val() || {};
+        allNames = Object.keys(times);
+
+        // Live-Status der Abmeldungen beobachten
+        db.ref(`abmeldungen/${dateKey()}`).on('value', snap=>{
+          statusNow = snap.val() || {};
+          render();
+        });
+      }catch(e){
+        info.textContent='Fehler beim Laden. Prüfe Verbindung/Regeln.';
       }
-      // Admin=1 erlaubt frühe Abmeldung wie zuvor.
-      const url = BASE + encodeURIComponent(name) + "&admin=1";
-      window.location.href = url;
-    });
+    }
+    document.addEventListener('DOMContentLoaded', init);
   </script>
 </body>
 </html>
